[composer] fixed overflow and added hack for scrolling

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -57,4 +57,12 @@ body{
     width: 80%;
 }
 
+.chatview {
+   list-style: none;
+   min-height:200px;
+   padding: 10px;
+   max-height: 85vh;
+   overflow: auto;
+   }
+
 	
